<resources>
    <string name="app_name">TodoXmlApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_regis_fragment">Hello Registration fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_fragment">Registration Fragment</string>
    <string name="register_for_new_account">Register for new account</string>
    <string name="login_to_registerd_account">Login to registerd account</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="user_name">User Name</string>
    <string name="user_name_hint">User Name</string>
    <string name="email">Email</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="add_or_edit_notes">Add or Edit Notes</string>
</resources>